test/testdata/functions/unused_parameter_error.lox
fun add(x, y, z) { // error: z has been declared but is never used
  return x + y;
}
